# hirpdag

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  TODO.md
.github/workflows/: book.yml  ci.yml  site.yml  test.yml
book/: book.toml
book/src/: SUMMARY.md  ch01-00-introduction.md  ch02-00-hirpdag.md  ch03-00-implementation.md  ch04-00-techniques.md  ch05-00-serialization.md
docs/: TERMINOLOGY.md  update_benchmark_results.sh
docs/adr/: 0001-serde-dag-aware-serialization.md  0002-module-attribute-macro.md
docs/design/: serialization.md
hirpdag/: Cargo.toml
hirpdag/src/: lib.rs
hirpdag/src/base/: basic_traits.rs  dag_serde.rs  meta.rs  mod.rs  reference.rs  rewrite.rs  serialize.rs
hirpdag/src/serialization/: binary.rs  json.rs
hirpdag_derive/: Cargo.toml
hirpdag_derive/src/: config.rs  configurations.rs  lib.rs
hirpdag_hashconsing/: Cargo.toml
hirpdag_hashconsing/src/: lib.rs  reference.rs  reference_arc.rs  reference_arc_box.rs  reference_arc_cacheline.rs  reference_leak.rs  reference_rc.rs  reference_sepcount.rs  reference_tlc.rs  table.rs  table_arcswap_strong.rs  table_hashmap_fallback_weak.rs  table_tov_weak_table.rs  table_vec_linear_weak.rs  table_vec_sorted_weak.rs  tableshared_arcswap.rs  tableshared_dashmap.rs  tableshared_evmap.rs  tableshared_flurry.rs  tableshared_mutex.rs  tableshared_sharded.rs  tableshared_skipmap.rs  test_terrible_hasher.rs  test_utils.rs  threadunsafe_table_hashmap_fallback.rs  threadunsafe_table_vec_linear.rs  threadunsafe_table_vec_sorted.rs  weak_entry.rs
hirpdag_hashconsing/src/reference/: arc.rs  leak.rs  rc.rs  sepcount.rs  tlc.rs
hirpdag_hashconsing/src/table/: amortized_purge.rs  arcswap_strong.rs  dashmap_strong.rs  evmap_strong.rs  flurry_strong.rs  hashmap_fallback_threadunsafe.rs  shared_mutex.rs  shared_sharded.rs  skipmap_strong.rs  tov_weak_table_threadunsafe.rs  vec_linear_threadunsafe.rs  vec_sorted_threadunsafe.rs  weak_entry.rs  weak_holder.rs
test_suite/: Cargo.toml
test_suite/benches/: README.md  builder_edits.rs  churn.rs  expr_substitution.rs  fibonacci.rs  large_nodes.rs  primes.rs  primes_arc_hash_linear.rs  primes_arc_hash_sorted.rs  primes_arc_tov_weak_table.rs  primes_leak_hash_linear.rs  rewrite_chain.rs  serde_roundtrip.rs  sparse_rewrite.rs
test_suite/benches/support/: mod.rs
test_suite/tests/: base.rs  concurrent_tables.rs  expr.rs  modules.rs  normalize.rs  serialization.rs
test_suite/tests/support/: mod.rs
