[package]
name = "hirpdag"
version = "0.2.0"
authors = ["Andrew Browne <dersaidin@dersaidin.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hirpdag/hirpdag"
keywords = ["hashconsing", "persistent", "dag", "rewriting"]
categories = ["caching", "memory-management", "data-structures"]
description = "Library and procedural macros for Hash Consed, Immutable, Reference Counted, Persistent, Directed Acyclic Graph data structures."

[features]
# Opt in to a `reset()` capability on the generated per-type tables and a
# per-module `hirpdag_reset_tables()` function that empties them. Intended for
# benchmarks and tests; see `hirpdag_hashconsing`'s `reset-tables` feature.
reset-tables = ["hirpdag_hashconsing/reset-tables"]

# Opt in to the table backends built on third-party collection crates. Required
# to select the `arc_tovweaktable`, `arc_dashmap`, `arc_flurry`, `arc_skipmap`,
# `arc_arcswap` presets (or the matching `TableShared*` types).
third-party-tables = ["hirpdag_hashconsing/third-party-tables"]

[dependencies]
hirpdag_hashconsing = { version = "0.2.0", path = '../hirpdag_hashconsing' }
hirpdag_derive = { version = "0.2.0", path = "../hirpdag_derive" }
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["use-std"] }
serde_json = "1.0"
