[package]
name = "hirpdag_hashconsing"
version = "0.2.0"
authors = ["Andrew Browne <dersaidin@dersaidin.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hirpdag/hirpdag"
keywords = ["hashconsing"]
categories = ["memory-management"]
description = "Various hashconsing implementations with a common interface."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weak-table = "0.3.2"
array-init = "2.1.0"

# Concurrent map / tree libraries wrapped by the `tableshared_*` implementations.
dashmap = "6.2.1"
flurry = "0.5.2"
evmap = "11.0.0"
arc-swap = "1.9.2"
crossbeam-skiplist = "0.1.3"
