[package]
name = "hirpdag_hashconsing"
version = "0.2.0"
authors = ["Andrew Browne <dersaidin@dersaidin.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hirpdag/hirpdag"
keywords = ["hashconsing"]
categories = ["memory-management"]
description = "Various hashconsing implementations with a common interface."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Opt in to a `reset()` method on the table traits that empties a table in
# place (through its existing interior mutability, so the read path is
# unchanged). Intended for benchmarks and tests that reuse the process-global
# tables across runs and need each run to start from an empty table. Resetting a
# table invalidates the hash-consing invariant for any references interned
# before the reset, so this is off by default.
reset-tables = []

# Opt in to the table backends built on third-party collection crates:
# `TableTovWeakTable` (weak-table) plus the concurrent `TableShared*` wrappers
# (dashmap, flurry, crossbeam-skiplist, arc-swap).
third-party-tables = [
    "dep:weak-table",
    "dep:dashmap",
    "dep:flurry",
    "dep:arc-swap",
    "dep:crossbeam-skiplist",
]

[dependencies]
array-init = "2.1.0"

# Third-party collection crates behind the `third-party-tables` feature.
weak-table = { version = "0.3.2", optional = true }
dashmap = { version = "6.2.1", optional = true }
flurry = { version = "0.5.2", optional = true }
arc-swap = { version = "1.9.2", optional = true }
crossbeam-skiplist = { version = "0.1.3", optional = true }
