[package]
name = "hirpdag_test_suite"
version = "0.0.0"
authors = ["Andrew Browne <dersaidin@dersaidin.net>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
hirpdag = {path = '../hirpdag'}

[dev-dependencies]
hirpdag_derive = {path = '../hirpdag_derive'}
criterion = "0.8"

[[bench]]
name = "primes"
harness = false

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "rewrite_chain"
harness = false

[[bench]]
name = "expr_substitution"
harness = false
