[package]
name = "hirpdag_test_suite"
version = "0.0.0"
authors = ["Andrew Browne <dersaidin@dersaidin.net>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[features]
default = ["reset-tables"]

# Enables the concurrent-collection preset tests/benches; forwards to hirpdag's
# opt-in feature. Enabled in CI via `--all-features`.
third-party-tables = ["hirpdag/third-party-tables"]

# Gives each memory-benchmark run a fresh interning table (see the `memory`
# bench groups). Forwards to hirpdag's opt-in feature. On by default so
# `cargo bench` measures memory correctly out of the box.
reset-tables = ["hirpdag/reset-tables"]

[dependencies]
hirpdag = {path = '../hirpdag'}

[dev-dependencies]
hirpdag_derive = {path = '../hirpdag_derive'}
criterion = "0.8"

[[bench]]
name = "primes"
harness = false

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "rewrite_chain"
harness = false

[[bench]]
name = "expr_substitution"
harness = false

[[bench]]
name = "large_nodes"
harness = false

[[bench]]
name = "sparse_rewrite"
harness = false

[[bench]]
name = "churn"
harness = false

[[bench]]
name = "builder_edits"
harness = false

[[bench]]
name = "serde_roundtrip"
harness = false
